fix(govdata): replace deprecated URL constructor in StooqDownloader
Same fix as file module - use URI.create().toURL() instead of the
deprecated URL(String) constructor.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>